[package]
name = "student-reputation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "=20.3.0"

[dev-dependencies]
soroban-sdk = { version = "=20.3.0", features = ["testutils"] }

[patch.crates-io]
zeroize = { version = "=1.7.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
